--- a/src/sass/theme/_header.scss
+++ b/src/sass/theme/_header.scss
@@ -59,7 +59,7 @@
         margin-right: 1rem;
     }
     .logo {
-        background-image: url(../img/gaffsy-logo--wo.svg);
+        background-image: url(../img/nepb-logo--wo.svg);
         background-position: center;
         background-repeat: no-repeat;
         background-size: contain;
