--- a/src/sass/theme/_buttons.scss
+++ b/src/sass/theme/_buttons.scss
@@ -15,7 +15,7 @@
 
 .btn-primary,
 .btn--accent {
-    color: black;
+    color: white;
     text-transform: uppercase;
     font-weight: 600;
     background-color: var(--col-highlight);
