--- a/src/sass/theme/_header.scss
+++ b/src/sass/theme/_header.scss
@@ -24,9 +24,9 @@
             }
         }
 
-        background-color: var(--col-primary);
+        background-color: white;
         a:not(.btn--accent) {
-            color: white;
+            color: var(--col-primary);
             text-decoration: none;
             font-size: 1rem;
             font-weight: 500;
@@ -59,7 +59,7 @@
         margin-right: 1rem;
     }
     .logo {
-        background-image: url(../img/nepb-logo--wo.svg);
+        background-image: url(../img/nepb-logo.svg);
         background-position: center;
         background-repeat: no-repeat;
         background-size: contain;
