--- a/src/sass/theme/_props.scss
+++ b/src/sass/theme/_props.scss
@@ -1,14 +1,14 @@
-$col-primary: #00A0DE;
-$col-dark: #00487C;
-$col-darkest: #0D0630;
-$col-highlight: #53DD6C;
+$col-primary: #002756;
+$col-dark: #000d26;
+$col-darkest: #000d26;
+$col-highlight: #00994e;
 $col-grey: #FFF0F0;
 
 :root {
-    --col-primary: #00A0DE;
-    --col-dark: #00487C;
-    --col-darkest: #0D0630;
-    --col-highlight: #53DD6C;
+    --col-primary: #002756;
+    --col-dark: #000d26;
+    --col-darkest: #000d26;
+    --col-highlight: #00994e;
     --col-grey: #FFF0F0;
     --h-top: 76px;
 }
