--- a/src/sass/theme/_typography.scss
+++ b/src/sass/theme/_typography.scss
@@ -1,42 +1,26 @@
-/* poppins-300 - latin */
+/* archivo-200 - latin */
 @font-face {
-    font-family: 'Poppins';
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Archivo';
     font-style: normal;
-    font-display: fallback;
-    font-weight: 300;
-    src: local(''),
-         url('../fonts/poppins-v20-latin-300.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-         url('../fonts/poppins-v20-latin-300.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+    font-weight: 200;
+    src: url('../fonts/archivo-v18-latin-200.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
   }
-  /* poppins-500 - latin */
+  /* archivo-regular - latin */
   @font-face {
-    font-family: 'Poppins';
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Archivo';
     font-style: normal;
-    font-display: fallback;
-    font-weight: 500;
-    src: local(''),
-         url('../fonts/poppins-v20-latin-500.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-         url('../fonts/poppins-v20-latin-500.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+    font-weight: 400;
+    src: url('../fonts/archivo-v18-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
   }
-  /* poppins-600 - latin */
+  /* archivo-700 - latin */
   @font-face {
-    font-family: 'Poppins';
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Archivo';
     font-style: normal;
-    font-display: fallback;
-    font-weight: 600;
-    src: local(''),
-         url('../fonts/poppins-v20-latin-600.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-         url('../fonts/poppins-v20-latin-600.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-  }
-  /* poppins-700 - latin */
-  @font-face {
-    font-family: 'Poppins';
-    font-style: normal;
-    font-display: fallback;
     font-weight: 700;
-    src: local(''),
-         url('../fonts/poppins-v20-latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-         url('../fonts/poppins-v20-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+    src: url('../fonts/archivo-v18-latin-700.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
   }
 
 
@@ -49,8 +33,8 @@ html {
 }
 
 body {
-    font-family: 'Poppins', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-weight: 300;
+    font-family: 'Archivo', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: 400;
     font-size: 1rem;
     line-height: 1.556;
     font-style: normal;
@@ -61,13 +45,13 @@ body {
 
 
 h1, .h1, h2, .h2, h3, .h3, h4, .h4, .h99 {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Archivo', sans-serif;
     font-style: normal;
     margin-bottom: 0.5rem;
-    font-weight: 300;
+    font-weight: 400;
     strong, span {
         font-weight: 700;
-        color: var(--col-primary);
+        color: var(--col-highlight);
     }
 }
 
@@ -86,5 +70,5 @@ h3, .h3 {
 }
 
 strong, b {
-    font-weight: 500;
+    font-weight: 700;
 }
