--- a/src/sass/theme/blocks/_calculator.scss
+++ b/src/sass/theme/blocks/_calculator.scss
@@ -4,11 +4,11 @@
         font-size: 2rem;
     }
     #esLabel,
-    #gaffsyLogo {
+    #nepbLogo {
         height: 60px;
         margin-bottom: 0.5rem;
     }
-    #gaffsyLogo {
+    #nepbLogo {
         position: relative;
          .fa-stack {
             font-size: 0.5rem;
