--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
  Version:      0.2
  License: GNU General Public License v2 or later
  License URI: http://www.gnu.org/licenses/gpl-2.0.html
- Text Domain:  cb-gaffsy
+ Text Domain:  cb-nepb
  Tags: one-column, custom-menu, featured-images, theme-options, translation-ready
- GitHub Theme URI: understrap/cb-gaffsy
+ GitHub Theme URI: understrap/cb-nepb
 */
