--- a/src/sass/theme/_footer.scss
+++ b/src/sass/theme/_footer.scss
@@ -1,5 +1,5 @@
 footer {
-    background-color: var(--col-dark);
+    background-color: var(--col-darkest);
     font-size: 0.889rem;
     color: white;
     ul.menu {
