--- a/src/sass/theme/_props.scss
+++ b/src/sass/theme/_props.scss
@@ -1,14 +1,15 @@
-$col-primary: #002756;
-$col-dark: #000d26;
-$col-darkest: #000d26;
-$col-highlight: #00994e;
+$col-primary: #48c8f0;
+$col-dark: #226073;
+$col-darkest: #454749;
+$col-highlight: #48c8f0;
 $col-grey: #FFF0F0;
 
 :root {
-    --col-primary: #002756;
-    --col-dark: #000d26;
-    --col-darkest: #000d26;
-    --col-highlight: #00994e;
+    --col-primary: #48c8f0;
+    --col-secondary: #226073;
+    --col-dark: #226073;
+    --col-darkest: #454749;
+    --col-highlight: #48c8f0;
     --col-grey: #FFF0F0;
     --h-top: 76px;
 }
