--- a/src/sass/theme/_typography.scss
+++ b/src/sass/theme/_typography.scss
@@ -1,28 +1,19 @@
-/* archivo-200 - latin */
+/* montserrat-regular - latin */
 @font-face {
     font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-    font-family: 'Archivo';
-    font-style: normal;
-    font-weight: 200;
-    src: url('../fonts/archivo-v18-latin-200.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  }
-  /* archivo-regular - latin */
-  @font-face {
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-    font-family: 'Archivo';
+    font-family: 'Montserrat';
     font-style: normal;
     font-weight: 400;
-    src: url('../fonts/archivo-v18-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url('../fonts/montserrat-v25-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
   }
-  /* archivo-700 - latin */
+  /* montserrat-700 - latin */
   @font-face {
     font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-    font-family: 'Archivo';
+    font-family: 'Montserrat';
     font-style: normal;
     font-weight: 700;
-    src: url('../fonts/archivo-v18-latin-700.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url('../fonts/montserrat-v25-latin-700.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
   }
-
 
 :root {
     font-variant-ligatures: none;
@@ -33,7 +24,7 @@ html {
 }
 
 body {
-    font-family: 'Archivo', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Montserrat', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: 400;
     font-size: 1rem;
     line-height: 1.556;
@@ -45,7 +36,7 @@ body {
 
 
 h1, .h1, h2, .h2, h3, .h3, h4, .h4, .h99 {
-    font-family: 'Archivo', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-style: normal;
     margin-bottom: 0.5rem;
     font-weight: 400;
