--- a/src/sass/theme/blocks/_quote_cta.scss
+++ b/src/sass/theme/blocks/_quote_cta.scss
@@ -1,5 +1,5 @@
 .quote_cta {
-    background-color: var(--col-primary);
+    background-color: var(--col-secondary);
     color: white;
     font-size: 1.556rem;
     text-transform: uppercase;
