--- a/css/custom-editor-style.css
+++ b/css/custom-editor-style.css
@@ -5,7 +5,7 @@
   --col-dark: #226073;
   --col-darkest: #454749;
   --col-highlight: #48c8f0;
-  --col-grey: #FFF0F0;
+  --col-grey: #FAFAFC;
   --h-top: 76px;
 }
 
