--- a/src/sass/theme/_props.scss
+++ b/src/sass/theme/_props.scss
@@ -2,7 +2,7 @@ $col-primary: #48c8f0;
 $col-dark: #226073;
 $col-darkest: #454749;
 $col-highlight: #48c8f0;
-$col-grey: #FFF0F0;
+$col-grey: #FAFAFC;
 
 :root {
     --col-primary: #48c8f0;
@@ -10,6 +10,6 @@ $col-grey: #FFF0F0;
     --col-dark: #226073;
     --col-darkest: #454749;
     --col-highlight: #48c8f0;
-    --col-grey: #FFF0F0;
+    --col-grey: #FAFAFC;
     --h-top: 76px;
 }
