--- a/src/sass/theme/_forms.scss
+++ b/src/sass/theme/_forms.scss
@@ -8,6 +8,11 @@
     margin-inline: auto;
     padding-left: 2rem;
 }
+
+.contact .gform_wrapper form {
+    padding-left: 0;
+}
+
 .gform_fields {
     list-style-type: none;
     margin-right: -15px;
