--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -23853,6 +23853,12 @@ a.anchor {
   visibility: hidden;
 }
 
+@media (min-width: 768px) {
+  .cols-lg-4 {
+    -moz-columns: 2;
+    columns: 2;
+  }
+}
 @media (min-width: 992px) {
   .cols-lg-2 {
     -moz-columns: 2;
@@ -23862,6 +23868,11 @@ a.anchor {
   .cols-lg-3 {
     -moz-columns: 3;
     columns: 3;
+  }
+
+  .cols-lg-4 {
+    -moz-columns: 4;
+    columns: 4;
   }
 }
 @media (min-width: 992px) {
